feat: ajustar menu

--- a/src/index.html
+++ b/src/index.html
@@ -62,253 +62,264 @@
       </nav>
     </header>
 
-    <main class="pt-24" id="main">
-      <div
-        class="relative overflow-hidden flex flex-col justify-center items-center px-6 md:px-8 md:pt-32 2xl:px-12"
-      >
-        <img
-          src="./imgs/fundo.png"
-          class="absolute inset-0 object-cover h-screen w-full"
-          alt="Imagem de fundo"
-        />
-        <h1
-          id="titulo-principal"
-          class="text-balance text-4xl sm:text-7xl font-[100] text-white text-center"
-        >
-          &#57409; poder das cartas,
-          <span class="block text-secondary">a luz da transformação</span>
-        </h1>
-
-        <figure
-          id="imagem-cartas"
-          class="max-h-[300px] md:max-h-[600px] overflow-hidden flex justify-center"
+    <div id="blur-menu-open">
+      <main class="pt-24" id="main">
+        <div
+          class="relative overflow-hidden flex flex-col justify-center items-center px-6 md:px-8 md:pt-32 2xl:px-12"
         >
           <img
-            src="./imgs/logotipo.png"
-            alt=""
-            class="object-cover h-[300px] md:h-[600px]"
+            src="./imgs/fundo.png"
+            class="absolute inset-0 object-cover h-screen w-full"
+            alt="Imagem de fundo"
           />
-        </figure>
-      </div>
-    </main>
-
-    <!-- Tiragem -->
-    <section
-      id="tiragens"
-      class="max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
-    >
-      <h2
-        class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
-      >
-        Tiragem
-      </h2>
-
-      <div
-        class="w-full price-cards grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 md:gap-6 2xl:gap-12"
-      >
-        <div
-          class="sticky sm:static top-[100px] bg-primary border border-secondary rounded-md p-6 text-center inline-flex flex-col items-center gap-6"
-        >
-          <figure>
-            <img
-              src="./imgs/mesa-real.png"
-              alt="Imagem representando mesa real"
-              class="aspect-square max-h-[200px] md:max-h-auto"
-            />
-          </figure>
-
-          <h1 class="text-3xl md:text-4xl text-white">
-            &#57417;esa Real <span class="block">Tiragem Completa</span>
+          <h1
+            id="titulo-principal"
+            class="text-balance text-4xl sm:text-7xl font-[100] text-white text-center"
+          >
+            &#57409; poder das cartas,
+            <span class="block text-secondary">a luz da transformação</span>
           </h1>
 
-          <span class="inline-block text-5xl md:text-7xl text-secondary"
-            >R$ 155</span
+          <figure
+            id="imagem-cartas"
+            class="max-h-[300px] md:max-h-[600px] overflow-hidden flex justify-center"
           >
-
-          <a
-            href="http://wa.me/5548996922646"
-            class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
-          >
-            Agendar
-          </a>
-        </div>
-
-        <div
-          class="sticky sm:static top-[100px] bg-primary border border-secondary rounded-md p-6 text-center inline-flex flex-col items-center gap-6"
-        >
-          <figure>
             <img
-              src="./imgs/caminhos-coracao.png"
-              alt="Imagem representando mesa real"
-              class="aspect-square max-h-[200px] md:max-h-auto"
+              src="./imgs/logotipo.png"
+              alt=""
+              class="object-cover h-[300px] md:h-[600px]"
             />
           </figure>
-
-          <h1 class="text-3xl md:text-4xl text-white">
-            ergunta
-            <span class="block"> &#57409;bjetiva</span>
-          </h1>
-
-          <span class="inline-block text-5xl md:text-7xl text-secondary"
-            >R$ 44</span
-          >
-
-          <a
-            href="http://wa.me/5548996922646"
-            class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
-          >
-            Agendar
-          </a>
         </div>
+      </main>
+
+      <!-- Tiragem -->
+      <section
+        id="tiragens"
+        class="max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
+      >
+        <h2
+          class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
+        >
+          Tiragem
+        </h2>
 
         <div
-          class="sticky sm:static top-[100px] bg-primary border border-secondary rounded-md p-6 text-center inline-flex flex-col items-center gap-6"
+          class="w-full price-cards grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-3 md:gap-6 2xl:gap-12"
         >
-          <figure>
-            <img
-              src="./imgs/pergunta-objetiva.png"
-              alt="Imagem representando mesa real"
-              class="aspect-square max-h-[200px] md:max-h-auto"
-            />
-          </figure>
-
-          <h1 class="text-3xl md:text-4xl text-white">
-            &#57417;esa Real <span class="block">Tiragem Completa</span>
-          </h1>
-
-          <span class="inline-block text-5xl md:text-7xl text-secondary"
-            >R$ 33</span
+          <div
+            class="sticky sm:static top-[100px] bg-primary border border-secondary rounded-md p-6 text-center inline-flex flex-col items-center gap-6"
           >
+            <figure>
+              <img
+                src="./imgs/mesa-real.png"
+                alt="Imagem representando mesa real"
+                class="aspect-square max-h-[200px] md:max-h-auto"
+              />
+            </figure>
 
-          <a
-            href="http://wa.me/5548996922646"
-            class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
+            <h1 class="text-3xl md:text-4xl text-white">
+              &#57417;esa Real <span class="block">Tiragem Completa</span>
+            </h1>
+
+            <span class="inline-block text-5xl md:text-7xl text-secondary"
+              >R$ 155</span
+            >
+
+            <a
+              href="http://wa.me/5548996922646"
+              class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
+            >
+              Agendar
+            </a>
+          </div>
+
+          <div
+            class="sticky sm:static top-[100px] bg-primary border border-secondary rounded-md p-6 text-center inline-flex flex-col items-center gap-6"
           >
-            Agendar
-          </a>
+            <figure>
+              <img
+                src="./imgs/caminhos-coracao.png"
+                alt="Imagem representando mesa real"
+                class="aspect-square max-h-[200px] md:max-h-auto"
+              />
+            </figure>
+
+            <h1 class="text-3xl md:text-4xl text-white">
+              ergunta
+              <span class="block"> &#57409;bjetiva</span>
+            </h1>
+
+            <span class="inline-block text-5xl md:text-7xl text-secondary"
+              >R$ 44</span
+            >
+
+            <a
+              href="http://wa.me/5548996922646"
+              class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
+            >
+              Agendar
+            </a>
+          </div>
+
+          <div
+            class="sticky sm:static top-[100px] bg-primary border border-secondary rounded-md p-6 text-center inline-flex flex-col items-center gap-6"
+          >
+            <figure>
+              <img
+                src="./imgs/pergunta-objetiva.png"
+                alt="Imagem representando mesa real"
+                class="aspect-square max-h-[200px] md:max-h-auto"
+              />
+            </figure>
+
+            <h1 class="text-3xl md:text-4xl text-white">
+              &#57417;esa Real <span class="block">Tiragem Completa</span>
+            </h1>
+
+            <span class="inline-block text-5xl md:text-7xl text-secondary"
+              >R$ 33</span
+            >
+
+            <a
+              href="http://wa.me/5548996922646"
+              class="max-w-2/3 w-full px-4 h-12 text-md border border-secondary hover:bg-primary hover:text-secondary hover:border hover:border-secondary transition-all rounded-4xl bg-secondary text-primary flex justify-center items-center"
+            >
+              Agendar
+            </a>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Quem sou eu -->
-    <section
-      id="quem-sou-eu"
-      class="max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
-    >
-      <h2
-        class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
+      <!-- Quem sou eu -->
+      <section
+        id="quem-sou-eu"
+        class="max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
       >
-        Quem sou eu ?
-      </h2>
-
-      <div
-        class="flex flex-col items-center lg:items-start lg:flex-row gap-12 lg:gap-20 font-lato text-white"
-      >
-        <img
-          src="./imgs/thayane.png"
-          alt="Imagem da taróloga"
-          class="quem-sou-eu__img object-cover lg:max-w-1/2 w-full sm:w-auto rounded-[40px] max-h-[600px]"
-        />
+        <h2
+          class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
+        >
+          Quem sou eu ?
+        </h2>
 
         <div
-          class="self-center text-md font-light md:text-2xl quem-sou-eu__conteudo"
+          class="flex flex-col items-center lg:items-start lg:flex-row gap-12 lg:gap-20 font-lato text-white"
         >
-          <p class="max-w-[370px]">
-            Sou Thayane Silvestri, taróloga e oraculista à frente da Iluminar
-            Oráculos. Acredito no poder do autoconhecimento e da espiritualidade
-            como caminhos de cura, direção e transformação. Com sensibilidade,
-            escuta e dedicação, ofereço atendimentos personalizados que ajudam a
-            encontrar clareza, propósito e escolhas mais conscientes.
-          </p>
-        </div>
-      </div>
-    </section>
+          <img
+            src="./imgs/thayane.png"
+            alt="Imagem da taróloga"
+            class="quem-sou-eu__img object-cover lg:max-w-1/2 w-full sm:w-auto rounded-[40px] max-h-[600px]"
+          />
 
-    <figure>
-      <img src="./imgs/barra.png" alt="" />
-    </figure>
-
-    <!-- Como funciona -->
-    <section
-      id="como-funciona"
-      class="max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
-    >
-      <h2
-        class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
-      >
-        Como funciona ?
-      </h2>
-
-      <div class="grid grid-cols-1 gap-16 lg:grid-cols-3">
-        <div class="flex flex-col justify-between">
-          <img class="size-96 self-center" src="./imgs/etica.png" alt="Ética" />
-          <div class="como-funciona__conteudo text-white text-center">
-            <h3 class="text-secondary text-3xl">Ética</h3>
-            <p class="mt-4 text-xl font-lato font-light">
-              Todas as leituras são conduzidas com respeito e confidencialidade
+          <div
+            class="self-center text-md font-light md:text-2xl quem-sou-eu__conteudo"
+          >
+            <p class="max-w-[370px]">
+              Sou Thayane Silvestri, taróloga e oraculista à frente da Iluminar
+              Oráculos. Acredito no poder do autoconhecimento e da
+              espiritualidade como caminhos de cura, direção e transformação.
+              Com sensibilidade, escuta e dedicação, ofereço atendimentos
+              personalizados que ajudam a encontrar clareza, propósito e
+              escolhas mais conscientes.
             </p>
           </div>
         </div>
+      </section>
 
-        <div class="flex flex-col justify-between">
-          <img
-            class="size-96 self-center"
-            src="./imgs/resposta-48h.png"
-            alt="Ética"
-          />
-          <div class="como-funciona__conteudo text-white text-center">
-            <h3 class="text-secondary text-3xl">Resposta em 48h úteis</h3>
-            <p class="mt-4 text-xl font-lato font-light">
-              A leitura é feita com cuidado, dedicação e entregue em no prazo
-            </p>
-          </div>
-        </div>
+      <figure>
+        <img src="./imgs/barra.png" alt="" />
+      </figure>
 
-        <div class="flex flex-col justify-between">
-          <img
-            class="size-96 self-center"
-            src="./imgs/flexibilidade.png"
-            alt="Ética"
-          />
-          <div class="como-funciona__conteudo text-white text-center">
-            <h3 class="text-secondary text-3xl">Flexibilidade</h3>
-            <p class="mt-4 text-xl font-lato font-light">
-              Receba sua orientação pelo whatsapp e ouça no seu tempo
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contato -->
-    <section
-      id="contatos"
-      class="pb-48 max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
-    >
-      <h2
-        class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
+      <!-- Como funciona -->
+      <section
+        id="como-funciona"
+        class="max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
       >
-        Contatos
-      </h2>
-      <ul class="flex items-center gap-12">
-        <li class="hover:scale-90 transition-all duration-200">
-          <a href="http://wa.me/5548996922646" target="blank">
-            <img class="size-12" src="./imgs/whatsapp.png" alt="" />
-          </a>
-        </li>
+        <h2
+          class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
+        >
+          Como funciona ?
+        </h2>
 
-        <li class="hover:scale-90 transition-all duration-200">
-          <a href="https://www.instagram.com/iluminaroraculoss/" target="blank">
-            <img class="size-12" src="./imgs/instagram.png" alt="" />
-          </a>
-        </li>
+        <div class="grid grid-cols-1 gap-16 lg:grid-cols-3">
+          <div class="flex flex-col justify-between">
+            <img
+              class="size-96 self-center"
+              src="./imgs/etica.png"
+              alt="Ética"
+            />
+            <div class="como-funciona__conteudo text-white text-center">
+              <h3 class="text-secondary text-3xl">Ética</h3>
+              <p class="mt-4 text-xl font-lato font-light">
+                Todas as leituras são conduzidas com respeito e
+                confidencialidade
+              </p>
+            </div>
+          </div>
 
-        <li class="hover:scale-90 transition-all duration-200">
-          <a href="https://www.youtube.com/@iluminaroraculos" target="blank">
-            <img class="size-12" src="./imgs/yotube.png" alt="" />
-          </a>
-        </li>
-      </ul>
-    </section>
+          <div class="flex flex-col justify-between">
+            <img
+              class="size-96 self-center"
+              src="./imgs/resposta-48h.png"
+              alt="Ética"
+            />
+            <div class="como-funciona__conteudo text-white text-center">
+              <h3 class="text-secondary text-3xl">Resposta em 48h úteis</h3>
+              <p class="mt-4 text-xl font-lato font-light">
+                A leitura é feita com cuidado, dedicação e entregue em no prazo
+              </p>
+            </div>
+          </div>
+
+          <div class="flex flex-col justify-between">
+            <img
+              class="size-96 self-center"
+              src="./imgs/flexibilidade.png"
+              alt="Ética"
+            />
+            <div class="como-funciona__conteudo text-white text-center">
+              <h3 class="text-secondary text-3xl">Flexibilidade</h3>
+              <p class="mt-4 text-xl font-lato font-light">
+                Receba sua orientação pelo whatsapp e ouça no seu tempo
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contato -->
+      <section
+        id="contatos"
+        class="pb-48 max-w-7xl mx-auto scroll-mt-[88px] px-6 md:px-16 py-4 flex flex-col items-center gap-8 md:gap-12"
+      >
+        <h2
+          class="price-title text-balance text-5xl sm:text-7xl font-[100] text-secondary text-center"
+        >
+          Contatos
+        </h2>
+        <ul class="flex items-center gap-12">
+          <li class="hover:scale-90 transition-all duration-200">
+            <a href="http://wa.me/5548996922646" target="blank">
+              <img class="size-12" src="./imgs/whatsapp.png" alt="" />
+            </a>
+          </li>
+
+          <li class="hover:scale-90 transition-all duration-200">
+            <a
+              href="https://www.instagram.com/iluminaroraculoss/"
+              target="blank"
+            >
+              <img class="size-12" src="./imgs/instagram.png" alt="" />
+            </a>
+          </li>
+
+          <li class="hover:scale-90 transition-all duration-200">
+            <a href="https://www.youtube.com/@iluminaroraculos" target="blank">
+              <img class="size-12" src="./imgs/yotube.png" alt="" />
+            </a>
+          </li>
+        </ul>
+      </section>
+    </div>
   </body>
 </html>
