feat: correção de texto

--- a/src/index.html
+++ b/src/index.html
@@ -266,7 +266,7 @@
             <div class="como-funciona__conteudo text-white text-center">
               <h3 class="text-secondary text-3xl">Resposta em 48h úteis</h3>
               <p class="mt-4 text-xl font-lato font-light">
-                A leitura é feita com cuidado, dedicação e entregue em no prazo
+                A leitura é feita com cuidado, dedicação e entregue no prazo
               </p>
             </div>
           </div>
